<resources>
    <string name="app_name">microblog</string>
    <string name="authors">Authors</string>
    <string name="dummy_error_msg">Something went wrong. Please try again</string>
    <string name="try_again">Try Again</string>
    <string name="location">Current Location</string>
    <string name="authorImage">Authors Image</string>
    <string name="latitude">Latitude : %s</string>
    <string name="post">There is no post available for this author</string>
    <string name="posts">Posts</string>
    <string name="post_image">Post Image</string>
    <string name="comments">Comments</string>
    <string name="post_details">Details</string>
    <string name="loading">loading...</string>
</resources>
