<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ex.microblog.authordetails.viewmodel.AuthorDetailsViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.ex.microblog.authordetails.ui.AuthorDetailsFragment">

                <ImageView
                    android:id="@+id/authorProfileImageView"
                    android:layout_width="142dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/authorImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_default_image_profile" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="56dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/latitudeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.latitude}"
                    app:layout_constraintStart_toStartOf="@+id/locationTextView"
                    app:layout_constraintTop_toBottomOf="@+id/locationTextView"
                    tools:text="Latitude: 50.30" />

                <TextView
                    android:id="@+id/longitudeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.longitude}"
                    app:layout_constraintStart_toStartOf="@+id/latitudeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeTextView"
                    tools:text="Longitude: 30.50" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@{viewModel.author.name}"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorProfileImageView"
                    tools:text="Allsion J." />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.author.email}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                    tools:text="allision@gmail.com" />


                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="13dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/emptyPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />


                <TextView
                    android:id="@+id/postMainTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/posts"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/postRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/loadMoreProgressBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/postMainTitleTextView"
                    tools:listitem="@layout/post_content_list_item"
                    />

                <ProgressBar
                    android:id="@+id/loadMoreProgressBar"
                    android:layout_width="33dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/errorMsgTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:visibility="gone"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/postMainTitleTextView"
                    tools:text="You are not connected to Internet"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
